--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body {
     align-items: center;
     display: flex;
     font-size: xx-large;
+    border-radius: 3px;
 }
 
 .player-points {
@@ -132,6 +133,5 @@ body {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-
 }
 
