trello 4 game logic

--- a/main.css
+++ b/main.css
@@ -70,6 +70,8 @@ body {
     width: 25vw;
     height: 15vh;
     border-radius: 10px;
+    font-size: 80px;
+    text-align: center;
 }
 
 .skip-button {
@@ -77,4 +79,8 @@ body {
     width: 25vw;
     height: 15vh;
     border-radius: 10px;
+}
+
+.start-dialog {
+     /* todo */
 }
