trello 6 starting page

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+    font-family: monospace;
+}
+
 :root {
     --background-color: #365D8A;
     --card-color: #204976;
@@ -82,5 +86,43 @@ body {
 }
 
 .start-dialog {
-     /* todo */
+    position: absolute;
+    top: 40px;
+    bottom: 40px;
+    left: 40px;
+    right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: var(--background-color);
+    border-radius: 20px;
+    border: 3px solid var(--dice-button-color);
+}
+
+.start-label {
+    font-size: 30px;
+    margin-bottom: 40px;
+}
+
+.start-button {
+    height: 60px;
+    width: 60px;
+    background: green;
+    border: 2px solid var(--dice-button-color);
+    border-radius: 50%;
+    font-size: 40px;
+}
+
+.start-number {
+    font-size: 70px;
+    color: var(--skip-button-color);
+}
+
+.play {
+    height: 60px;
+    width: 160px;
+    border-radius: 10px;
+    font-size: 25px;
+    margin-top: 40px;
 }
