--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body {
 
 .center-middle {
     background-color: var(--background-color);
-    height: 60vh;
+    height: 70vh;
     justify-content: space-evenly;
     align-items: center;
     display: flex;
@@ -50,23 +50,30 @@ body {
 
 .player-window {
     background-color: var(--background-color);
-    height: 30vh;
+    height: 20vh;
     justify-content: space-evenly;
     display: flex;
     align-items: center;
 }
 
 .player-list {
-    background-color: chartreuse;
     height: 10vh;
     display: flex;
 }
 
 .player-tab {
-    background-color: var(--player-tab-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: -webkit-fill-available;
     text-align: center;
-    border: 2px solid #085656;
+    border-top: 0;
+    background-color: var(--background-color);
+    font-size: 30px;
+}
+
+.player-tab.active {
+    background-color: var(--player-tab-color);
 }
 
 .dice-button {
@@ -74,7 +81,9 @@ body {
     width: 25vw;
     height: 15vh;
     border-radius: 10px;
-    font-size: 80px;
+    padding-top: 25px;
+    box-sizing: border-box;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -83,6 +92,10 @@ body {
     width: 25vw;
     height: 15vh;
     border-radius: 10px;
+    padding-top: 25px;
+    box-sizing: border-box;
+    font-size: 20px;
+    text-align: center;
 }
 
 .start-dialog {
